tests/NormalTests/paczka1/small_fuzzy/83960453.err
Error in line 6: jsnRY4yOV A312 3,3
Error in line 1: S104 S104 74,1
